<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_preferences_user">

        <EditTextPreference
            android:key="name"
            android:title="@string/title_name_preference"
            android:summary="@string/summary_name_preference"
            android:dialogTitle="@string/title_name_preference" />

        <EditTextPreference
            android:key="height"
            android:title="@string/title_height_preference"
            android:summary="@string/summary_height_preference"
            android:dialogTitle="@string/title_height_preference"
            android:inputType="number"
            android:defaultValue="175" />

        <EditTextPreference
            android:key="weight"
            android:title="@string/title_weight_preference"
            android:summary="@string/summary_weight_preference"
            android:dialogTitle="@string/title_weight_preference"
            android:inputType="number"
            android:defaultValue="60" />

        <ListPreference
            android:key="sex"
            android:title="@string/title_sex_preference"
            android:summary="@string/summary_sex_preference"
            android:entries="@array/entries_sex_preference"
            android:entryValues="@array/entries_sex_preference"
            android:dialogTitle="@string/title_sex_preference"
            android:defaultValue="Male" />

        <EditTextPreference
            android:key="age"
            android:title="@string/title_age_preference"
            android:summary="@string/summary_age_preference"
            android:dialogTitle="@string/title_age_preference"
            android:inputType="number"
            android:defaultValue="25" />

        <ListPreference
            android:key="goal"
            android:title="@string/title_goal_preference"
            android:summary="@string/summary_goal_preference"
            android:entries="@array/entries_goal_preference"
            android:entryValues="@array/entries_goal_preference"
            android:dialogTitle="@string/title_goal_preference"
            android:defaultValue="5000" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_preferences_info">

        <EditTextPreference
            android:key="mac_address"
            android:title="@string/title_mac_address_preference"
            android:enabled="false" />

        <EditTextPreference
            android:key="firmware"
            android:title="@string/title_firmware_preference"
            android:enabled="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_preferences_about">

        <PreferenceScreen
            android:key="about"
            android:title="@string/title_license_preference"
            android:summary="@string/summary_license_preference">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/action_about_preference" />

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>