<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_preferences_user" >

        <EditTextPreference
            android:key="name"
            android:title="@string/title_name_preference"
            android:summary="@string/summary_name_preference"
            android:dialogTitle="@string/title_name_preference" />

        <EditTextPreference
            android:key="height"
            android:title="@string/title_height_preference"
            android:summary="@string/summary_height_preference"
            android:dialogTitle="@string/title_height_preference"
            android:inputType="number" />

        <EditTextPreference
            android:key="weight"
            android:title="@string/title_weight_preference"
            android:summary="@string/summary_weight_preference"
            android:dialogTitle="@string/title_weight_preference"
            android:inputType="number" />

        <ListPreference
            android:key="sex"
            android:title="@string/title_sex_preference"
            android:summary="@string/summary_sex_preference"
            android:entries="@array/entries_sex_preference"
            android:entryValues="@array/entries_sex_preference"
            android:dialogTitle="@string/title_sex_preference" />

        <EditTextPreference
            android:key="age"
            android:title="@string/title_age_preference"
            android:summary="@string/summary_age_preference"
            android:dialogTitle="@string/title_age_preference"
            android:inputType="number" />

    </PreferenceCategory>

</PreferenceScreen>